--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main_ui2">MainUI2Activity</string>
+    <string name="title_activity_main_ui2">Main UI Activity </string>
 
 
 
